@@ -193,7 +193,7 @@ CMD(annotate, "annotate", "", CMD_REF(informative), N_("PATH"),
 
   const_file_t file_node = downcast_to_file_t(node);
   L(FL("annotate for file_id %s") % file_node->self);
-  do_annotate(project, file_node, rid, app.opts.revs_only);
+  do_annotate(app, project, file_node, rid, app.opts.revs_only);
 }
 
 CMD(identify, "identify", "", CMD_REF(debug), N_("[PATH]"),
