@@ -126,7 +126,7 @@ public:
   bool hook_get_default_command_options(commands::command_id const & cmd,
                                         args_vector & args);
 
-  bool hook_get_date_format_spec(std::string & spec);
+  bool hook_get_date_format_spec(date_format_spec in, std::string & out);
 
   // workspace hooks
   bool hook_use_inodeprints();
